--- a/package.json
+++ b/package.json
@@ -1,48 +1,59 @@
 {
-  "name": "ng-ticker",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~10.0.6",
-    "@angular/common": "~10.0.6",
-    "@angular/compiler": "~10.0.6",
-    "@angular/core": "~10.0.6",
-    "@angular/forms": "~10.0.6",
-    "@angular/platform-browser": "~10.0.6",
-    "@angular/platform-browser-dynamic": "~10.0.6",
-    "@angular/router": "~10.0.6",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.6",
-    "@angular-devkit/build-ng-packagr": "~0.1000.6",
-    "@angular/cli": "~10.0.5",
-    "@angular/compiler-cli": "~10.0.6",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^10.0.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
-  }
+    "name": "ng-ticker-angular",
+    "version": "1.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "ticker:build": "ng build ng-ticker",
+        "ticker:publish": "ng build ng-ticker --prod && cd dist/ng-ticker && npm publish --registery hhtp://localhost:4873"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~10.0.6",
+        "@angular/common": "~10.0.6",
+        "@angular/compiler": "~10.0.6",
+        "@angular/core": "~10.0.6",
+        "@angular/forms": "~10.0.6",
+        "@angular/platform-browser": "~10.0.6",
+        "@angular/platform-browser-dynamic": "~10.0.6",
+        "@angular/router": "~10.0.6",
+        "g": "^2.0.1",
+        "http-server": "^0.12.3",
+        "rxjs": "~6.5.5",
+        "tslib": "^2.0.0",
+        "verdaccio": "^4.8.1",
+        "zone.js": "~0.10.3"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.1000.6",
+        "@angular-devkit/build-ng-packagr": "~0.1000.6",
+        "@angular/cli": "~10.0.5",
+        "@angular/compiler-cli": "~10.0.6",
+        "@types/node": "^12.11.1",
+        "@types/jasmine": "~3.5.0",
+        "@types/jasminewd2": "~2.0.3",
+        "codelyzer": "^6.0.0",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~5.0.0",
+        "karma": "~5.0.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~3.0.2",
+        "karma-jasmine": "~3.3.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "ng-packagr": "^10.0.0",
+        "protractor": "~7.0.0",
+        "ts-node": "~8.3.0",
+        "tslint": "~6.1.0",
+        "typescript": "~3.9.5"
+    },
+    "prettier": {
+        "tabWidth": 4,
+        "singleQuote": true,
+        "bracketSpacing": true,
+        "printWidth": 80
+    }
 }
