--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,14 @@ branches:
 before_script:
     - npm install -g @angular/cli
 script:
-    # - ng lint
-    # - npm run test-headless
+    - ng lint
+    - ng test
     - ng build --prod --base-href https://dheeraj237.github.io/ng-ticker/
     - mv dist/web-app/index.html dist/web-app/404.html
+    - npm run lint-lib
+    - npm run build:lib
+    - rm README.md
+    - cp ./projects/ng-ticker/README.md README.md
 deploy:
     provider: pages
     skip_cleanup: true
@@ -20,6 +24,18 @@ deploy:
     local_dir: dist/web-app
     on:
         branch: master
+
+git:
+  depth: 3
+
+after_success:
+    - cd ./projects/ng-ticker/
+    - npm run travis-deploy-once "npm run semantic-release"
+
+branches:
+  except:
+    - /^v\d+\.\d+\.\d+$/
+
 notifications:
     email:
         recipients:
