--- a/.travis.yml
+++ b/.travis.yml
@@ -6,20 +6,34 @@ sudo: required
 branches:
     only:
         - master
+
 before_script:
     - npm install -g @angular/cli
+
 script:
-    # - ng lint
-    # - npm run test-headless
+    - ng lint
+    # - ng test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
     - ng build --prod --base-href https://dheeraj237.github.io/ng-ticker/
     - mv dist/web-app/index.html dist/web-app/404.html
+    - npm run lint-lib
+    - npm run build:lib
+    - rm README.md
+    - cp ./projects/ng-ticker/README.md README.md
 deploy:
     provider: pages
-    skip_cleanup: true
+    cleanup: false
     github_token: $GITHUB_TOKEN
     local_dir: dist/web-app
     on:
         branch: master
+
+git:
+    depth: 3
+
+after_success:
+    - cd dist/ng-ticker
+    - npm run semantic-release
+
 notifications:
     email:
         recipients:
