--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
         "verdaccio:publish": "ng build ng-ticker --prod && cd dist/ng-ticker && npm publish --registery hhtp://localhost:4873",
         "ng-ticker:publish": "ng build ng-ticker --prod && cd dist/ng-ticker && npm publish",
         "lint-lib": "ng lint ng-ticker",
-        "commit": "git-cz",
-        "travis-deploy-once": "travis-deploy-once --pro",
-        "semantic-release": "semantic-release"
+        "commit": "git-cz"
     },
     "config": {
         "commitizen": {
@@ -28,7 +26,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "npm run lint && npm run lint-lib",
+            "pre-commit": "",
             "commit-msg": ""
         }
     },
@@ -50,7 +48,6 @@
         "ng-ticker": "^1.0.0",
         "rxjs": "~6.5.5",
         "tslib": "^2.0.0",
-        "verdaccio": "^4.8.1",
         "zone.js": "~0.10.3"
     },
     "devDependencies": {
