--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ script:
     # - npm run build:lib
 deploy:
     provider: pages
+    skip_cleanup: true
     github_token: $GITHUB_TOKEN
     local_dir: dist/web-app
     on:
