--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "",
+            "pre-commit": "ng lint",
             "commit-msg": ""
         }
     },
@@ -45,6 +45,7 @@
         "@angular/router": "~10.0.6",
         "g": "^2.0.1",
         "http-server": "^0.12.3",
+        "ng-ticker": "^2.1.0",
         "rxjs": "~6.5.5",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.3"
@@ -55,7 +56,7 @@
         "@angular/cli": "~10.0.5",
         "@angular/compiler-cli": "~10.0.6",
         "@commitlint/cli": "^9.1.2",
-        "@commitlint/config-conventional": "^9.1.2",
+        "@commitlint/config-conventional": "^10.0.0",
         "@types/jasmine": "~3.5.0",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "^12.11.1",
