build: readme path changed.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ script:
     # - ng test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
     - ng build --prod --base-href https://dheeraj237.github.io/ng-ticker/
     - mv dist/web-app/index.html dist/web-app/404.html
-    - rm projects/ng-ticker/README.md
-    - cp README.md projects/ng-ticker/README.md
+    - rm README.md
+    - cp projects/ng-ticker/README.md README.md
     # - npm run lint-lib
     # - npm run build:lib
 deploy:
