--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,11 @@ dist: trusty
 sudo: required
 branches:
     only:
-        - master
+        - develop
 
 before_script:
     - npm install -g @angular/cli
+    - npm install
 
 script:
     - ng lint
@@ -19,15 +20,15 @@ script:
     - cp projects/ng-ticker/README.md README.md
     # - npm run lint-lib
     # - npm run build:lib
-deploy:
-    provider: pages
-    skip_cleanup: true
-    github_token: $GITHUB_TOKEN
-    local_dir: dist/web-app
-    on:
-        branch: master
+# deploy:
+#     provider: pages
+#     skip_cleanup: true
+#     github_token: $GITHUB_TOKEN
+#     local_dir: dist/web-app
+#     on:
+#         branch: master
 
-after_success:
+# after_success:
     # - npm version projects/ng-ticker minor
     # - npm dist/ng-ticker publish
     # - npm run semantic-release
